Stop stretching of images

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@ html {
 img {
     display: inline;
     width: 200px;
-    height: 100px;
 }
 #footer {
     width: 100%;
@@ -85,8 +84,5 @@ body {
     text-shadow: 2px 2px 4px #000000;
 }
 .stop-stretch {
-    overflow: hidden;
-    width: 200px;
-    height: 100px;
-}
+ 
 }
